# drumex

./: CMakeLists.txt  Drumex.sfd  Enums.h  Petrucci.sfd  README.md  Translations.h  design_thoughts.txt  ext.h  main.cpp  validate_resources.py
display/: Display.cpp  Display.h  DisplayConfigurations.h
exercise/: Exercise.cpp  Exercise.h
imgui/: CMakeLists.txt
location/: Location.cpp  Location.h
logging/: Logger.cpp  Logger.h
metronome/: Metronome.cpp  Metronome.h
mixer/: Mixer.cpp  Mixer.h  Sound.h
notation/: Fraction.cpp  Fraction.h  Notation.cpp  Notation.h  NotationDisplay.cpp  NotationDisplay.h  NotationDisplayUtils.cpp  NotationDisplayUtils.h  NotationUtils.cpp  NotationUtils.h
notation_container/: BarContainer.cpp  BarContainer.h  NotationContainer.cpp  NotationContainer.h  RhythmContainer.cpp  RhythmContainer.h  VoiceContainer.cpp  VoiceContainer.h
part/: Part.cpp  Part.h
reader/: Exercise.cpp  Exercise.h  Part.cpp  Part.h  Reader.cpp  Reader.h
resources/examples/exercise/: alternate.exercise.json  alternate.json  change-note-and-fill-and-sticking.exercise.json  change-note-and-fill-and-sticking.json  change-note-and-fill.exercise.json  change-note-and-fill.json  change-note.exercise.json  change-note.json  double.exercise.json  double.json  fill.exercise.json  fill.json  filter.exercise.json  filter.json  fit.exercise.json  scale.exercise.json  scale.json  sticking.exercise.json  sticking.json  stretch-sticking.exercise.json  stretch-sticking.json  tuplet.exercise.json  tuplet.json
resources/examples/part/: custom.json  custom.part.json  regular.json
resources/exercises/: alternate-example.json  apply-variations.json  chester-2-a.json  double-paradidles.json  double-stuff.json  polyrhythm-3-on-4.json  vars-dev.exercise.json  vars-dev.json  vars.exercise.json  vars.json
resources/exercises/variations_examples/: change-note-and-fill-and-sticking.json  change-note-and-fill.json  change-note.json  double.json  fill.json  filter.json  scale.json  sticking.json  stretch-sticking.json  tuplet.json
resources/play/: playing.exercise.json  playing.json  playing.part.json  playing_2.exercise.json  stuff.json
resources/rudiments/: chester-2-a.json  chester-2-a.part.json  paradidles.json  paradidles.part.json
resources/variations/: 2s-variations.json  3s-variations.json  3s-variations.part.json  4-on-4-3-notes.json  4s-variations.part.json  5s-variations.json  5s-variations.part.json  7s-variations.part.json  hihat-pedal-variations.part.json
resources_menu/: ResourcesMenu.cpp  ResourcesMenu.h
role/: Role.cpp  Role.h
schema/: README.md  exercise.json  note.json  part.json
time_signature/: TimeSignature.cpp  TimeSignature.h
variations/: Variations.cpp  Variations.h
